fix :hover on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -161,7 +161,12 @@ a {
     flex-direction: column;
     align-items: center;
   }
-
+  .medium:hover {
+    scale: 1.1;
+    z-index: 10;
+    transition: all .2s ease-in-out;
+    box-shadow: 30px 30px 300px 300px rgba(0, 0, 0, 0.8);
+  }
   #portrait::before {
     box-shadow: 5px 5px 14px 1px rgba(0, 0, 0, 0.8);
   }
